--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pulearn (>=0.0.11,<0.0.12)",
     "joblib (>=1.5.1,<2.0.0)",
     "xgboost (>=3.0.2,<4.0.0)",
+    "python-json-logger (>=3.3.0,<4.0.0)",
 ]
 
 [tool.poetry.group.dev.dependencies]
