--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,36 +1,34 @@
 [project]
 name = "feedoscope"
 version = "0.1.0"
-description = ""
-authors = [
-    {name = "JPFrancoia",email = "jeanpatrick.francoia@gmail.com"}
-]
+description = "A tool to assign a pertinence score to RSS articles extracted from tt-rss."
 readme = "README.md"
-requires-python = ">=3.12,<3.13"
+requires-python = ">=3.12.11"
 dependencies = [
-    "transformers[torch] (>=4.53.0,<5.0.0)",
-    "sentence-transformers (>=4.1.0,<5.0.0)",
     "psycopg (>=3.2.9,<4.0.0)",
     "psycopg-pool (>=3.2.6,<4.0.0)",
-    "sentencepiece (>=0.2.0,<0.3.0)",
     "clean-text[gpl] (>=0.6.0,<0.7.0)",
-    "datasets (>=3.6.0,<4.0.0)",
-    "evaluate (>=0.4.4,<0.5.0)",
     "beautifulsoup4 (>=4.13.4,<5.0.0)",
-    "pulearn (>=0.0.11,<0.0.12)",
     "joblib (>=1.5.1,<2.0.0)",
-    "xgboost (>=3.0.2,<4.0.0)",
     "python-json-logger (>=3.3.0,<4.0.0)",
 ]
 
-[tool.poetry.group.dev.dependencies]
-ipdb = "^0.13.13"
-ipython = "^9.2.0"
-black = "*"
-mypy = "*"
-pre-commit = "*"
-isort = "^6.0.1"
+[dependency-groups]
+dev = [
+    "black>=25.1.0",
+    "ipdb>=0.13.13",
+    "ipython>=9.4.0",
+    "isort>=6.0.1",
+    "pre-commit>=4.2.0",
+    "ruff>=0.12.2",
+]
+train = [
+    "transformers[torch] (>=4.53.0,<5.0.0)",
+    "xgboost (>=3.0.2,<4.0.0)",
+    "pulearn (>=0.0.11,<0.0.12)",
+    "pandas>=2.3.1",
+    "sentence-transformers (>=4.1.0,<5.0.0)",
+]
 
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.uv]
+default-groups = ["dev", "train"]
