--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "beautifulsoup4 (>=4.13.4,<5.0.0)",
     "joblib (>=1.5.1,<2.0.0)",
     "python-json-logger (>=3.3.0,<4.0.0)",
+    "sentence-transformers (>=4.1.0,<5.0.0)",
 ]
 
 [dependency-groups]
@@ -27,8 +28,19 @@ train = [
     "xgboost (>=3.0.2,<4.0.0)",
     "pulearn (>=0.0.11,<0.0.12)",
     "pandas>=2.3.1",
-    "sentence-transformers (>=4.1.0,<5.0.0)",
 ]
 
 [tool.uv]
 default-groups = ["dev", "train"]
+
+[tool.isort]
+# Make isort compatible with black
+profile = "black"
+# Additional custom settings
+force_sort_within_sections = true
+default_section = "THIRDPARTY"
+# Add own libraries here
+#known_first_party=
+# When not using relative imports, add local package here
+known_localproject = ["tests", "custom_logging", "feedoscope"]
+sections=["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALPROJECT", "LOCALFOLDER"]
