--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "joblib (>=1.5.1,<2.0.0)",
     "python-json-logger (>=3.3.0,<4.0.0)",
     "sentence-transformers (>=4.1.0,<5.0.0)",
+    "evaluate>=0.4.5",
+    "datasets>=4.0.0",
 ]
 
 [dependency-groups]
@@ -20,6 +22,7 @@ dev = [
     "ipdb>=0.13.13",
     "ipython>=9.4.0",
     "isort>=6.0.1",
+    "mypy>=1.17.1",
     "pre-commit>=4.2.0",
     "ruff>=0.12.2",
 ]
