--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "xgboost (>=3.0.2,<4.0.0)",
     "pulearn (>=0.0.11,<0.0.12)",
     "pandas>=2.3.1",
+    "torch>=2.8.0",
 ]
 
 [dependency-groups]
@@ -31,6 +32,9 @@ dev = [
     "pre-commit>=4.2.0",
     "ruff>=0.12.2",
     "types-tqdm>=4.67.0.20250516",
+]
+train = [
+    "transformers[torch]>=4.55.0",
 ]
 
 [tool.uv]
