Adding logging for training

--- a/logging.conf
+++ b/logging.conf
@@ -2,7 +2,7 @@
 # https://docs.python.org/3/library/logging.config.html#logging-config-fileformat
 
 [loggers]
-keys=root
+keys=root,transformers
 
 [handlers]
 keys=consoleHandler
@@ -13,6 +13,12 @@ keys=json
 [logger_root]
 level=DEBUG
 handlers=consoleHandler
+
+[logger_transformers]
+level=INFO
+handlers=consoleHandler
+qualname=transformers
+propagate=0
 
 [handler_consoleHandler]
 class=logging.StreamHandler
