--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pulearn (>=0.0.11,<0.0.12)",
     "pandas>=2.3.1",
     "llama-cpp-python>=0.3.16",
+    "pydantic>=2.11.7",
 ]
 
 [dependency-groups]
