--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ dependencies = [
     "xgboost (>=3.0.2,<4.0.0)",
     "pulearn (>=0.0.11,<0.0.12)",
     "pandas>=2.3.1",
-    "llama-cpp-python>=0.3.16",
     "pydantic>=2.11.7",
 ]
 
@@ -37,6 +36,9 @@ dev = [
 ]
 train = [
     "transformers[torch]>=4.55.0",
+]
+infer = [
+    "llama-cpp-python>=0.3.16",
 ]
 
 [tool.uv]
